--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             border-radius: 5px;
         }
         .button:hover {
-            background-color:black;
+            background-color:rgb(207, 182, 41);
         }
         
     </style>
