--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         }
         .button:hover {
             background-color:rgb(207, 182, 41);
+            color:black;
         }
         
     </style>
